--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         </canvas>
         <script src="assetmanager.js"></script>
-        <script src="gameEngine.js"></script>
+        <script src="gameengine.js"></script>
         <!-- <script src="animator.js"></script>
         <script src="entities/pharo.js"></script>
         <script src="entities/pharaohController.js"></script>
